CHANGELOG Roundcube Webmail
===========================

RELEASE 1.0.12
--------------
- Fix file disclosure vulnerability caused by insufficient input validation [CVE-2017-16651] (#6026)

RELEASE 1.0.11
--------------
- Password: Fix security issue in virtualmin and sasl drivers [CVE-2017-8114]

RELEASE 1.0.10
--------------
- Strip HTML tags inside CSS style definitions
- Fix vulnerability in handling of mail()'s 5th argument
- Don't create multipart/alternative messages with empty text/plain part (#5283)
- Fix XSS issue in href attribute on area tag (#5240)
- Wash position:fixed style in HTML mail for better security (#5264)

RELEASE 1.0.9
-------------
- Fix a regression where some contact data was missing in export and PHP warnings were logged (Kolab #4522)
- Enable use of TLSv1.1 and TLSv1.2 for IMAP (#4955)
- Fix XSS issue in SVG images handling (#4949)
- Fix (again) security issue in DBMail driver of password plugin [CVE-2015-2181] (#4958)
- Fix bug where Archive/Junk buttons were not active after page jump with select=all mode (#4961)
- Fix bug in long recipients list parsing for cases where recipient name contained @-char (#4964)
- Fix additional_message_headers plugin compatibility with Mail_Mime >= 1.9 (#4966)
- Hide DSN option in Preferences when smtp_server is not used (#4967)

RELEASE 1.0.8
-------------
- Add workaround for https://bugs.php.net/bug.php?id=70757 (#4931)
- Fix HTML sanitizer to skip <!-- node type X --> in output (#4932)
- Fix charset encoding of message/rfc822 part bodies (#4937)
- Fix handling of message/rfc822 attachments on replies and forwards (#4938)
- Fix PDF support detection in Firefox > 19 (#4941)
- Fix path traversal vulnerability (CWE-22) in setting a skin (#4945)
- Fix so drag-n-drop of text (e.g. recipient addresses) on compose page actually works (#4944)
- Fix .htaccess rewrite rules to not block .well-known URIs (#4943)

RELEASE 1.0.7
-------------
- Get rid of Mail_mimeDecode package dependency (#4836)